--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     background-color: aqua;
     border: 1px solid white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
